frontend/tests/cases/negative/impossibility.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/impossibility.gr:6:14:
Expected `Vec 0 a1.1` but got `(Vec (n0 + 1) a0) [(0 : Ext Nat)..∞]`